--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News Central</string>
+    <string name="image_description">Imagem da notícia</string>
 </resources>
